--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
     <artifactId>spring-context</artifactId>
     <version>${org.springframework.version}</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-webmvc</artifactId>
+    <version>${org.springframework.version}</version>
+</dependency>
+
 		
 
 
